--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "clsx": "^1.2.1",
     "compressorjs": "^1.2.1",
     "dayjs": "^1.11.5",
+    "editorjs-audio-tool": "^1.0.1",
     "editorjs-hyperlink": "^1.0.6",
     "ethers": "5.4.0",
     "everpay": "^0.6.7",
